@@ -5360,11 +5360,6 @@ Optimisez l'efficacité. Affichez les mesures de l'efficacité du stockage et id
   <block id="7fc21546461474a1cc543852dc120330" category="paragraph">Si vous rencontrez des problèmes lors du lancement de l'instance Cloud Volumes ONTAP, consultez le message d'échec. Vous pouvez également sélectionner l'environnement de travail et cliquer sur Re-create environment.</block>
   <block id="d036b4a2aa80729ab508e1851458f506" category="cell">Sélectionnez les identifiants AWS et l'abonnement Marketplace pour les utiliser avec ce système Cloud Volumes ONTAP. Cliquez sur *Ajouter un abonnement* pour associer les informations d'identification sélectionnées à un nouvel abonnement AWS Marketplace. L'abonnement peut s'agir d'un contrat annuel ou d'un paiement pour Cloud Volumes ONTAP à l'heure. Si vous avez acheté une licence directement auprès d'NetApp (BYOL), aucun abonnement AWS n'est requis. <block ref="2ae6dc7cea05e6172a8f0e381f70d632" category="inline-link-rx"></block>.</block>
   <block id="fc687f57dc8188e5dad217858c078354" category="section-title">Rotation des clés dans Cloud Volumes ONTAP</block>
-  <block id="c8f70aa37f5c88b6da2024d42bae9616" category="paragraph">Si vous créez une nouvelle version de votre clé, Cloud Volumes ONTAP utilise automatiquement la dernière version de la clé, garantissant ainsi la sécurité de vos données sans nécessiter de mises à jour manuelles.</block>
-  <block id="7463254e31b93d5b76992c84139a17de" category="list-text">Accédez à votre coffre-fort de clés dans le portail Azure.</block>
-  <block id="d6cff41b1c8a33920bc46aba04b89485" category="list-text">Sélectionnez la touche que vous souhaitez faire pivoter.</block>
-  <block id="38b4782700181268adc6819ae7534a0f" category="list-text">Cliquez sur *Nouvelle version* pour générer une nouvelle version de la clé.</block>
-  <block id="d35d0e531d2de4587a8bd21e51823f97" category="paragraph">Une fois qu'une nouvelle version est créée, Cloud Volumes ONTAP détecte et utilise automatiquement la dernière version de la clé pour le chiffrement.</block>
   <block id="d2a95dd3692cce58be8541add2bc6897" category="paragraph">La plupart des configurations sont prises en charge. Si vous disposez d'un système Cloud Volumes ONTAP exécutant la version la plus récente, alors c'est un bon choix. <block ref="f2e6a88e181ee9519c72412b23fc6e17" category="inline-link-macro-rx"></block>.</block>
   <block id="1a59c4cde0b6364677026791f943ea0f" category="paragraph">Le Tiering des données doit être activé sur un agrégat pour l'activer sur un volume. Vous devez connaître les exigences relatives aux nouveaux volumes et aux volumes existants. <block ref="7beee552935977f4dc8f9885d22b65a0" category="inline-xref-macro-rx"></block>.</block>
   <block id="c64796eb83e1bb434daed77e0937d1b4" category="paragraph">BlueXP  crée un magasin d'objets pour les données inactives lors de la création du système<block ref="dbb78a2cc39acf14e084217f8235322a" category="inline-xref-macro-rx"></block>. Ensuite, il vous suffit d'activer le Tiering des données sur les volumes (et dans certains cas, <block ref="7f499208f2ff911432bf2cd70bde52dd" category="inline-xref-macro-rx"></block>).</block>
@@ -5802,4 +5797,17 @@ Optimisez l'efficacité. Affichez les mesures de l'efficacité du stockage et id
   <block id="7533d0f4870d29edf1d705a15d4f71e3" category="sidebar">Gérez vos machines virtuelles de stockage dans AWS</block>
   <block id="db5cf7834d39ce63219e28d402aeb9c2" category="sidebar">Gérez les machines virtuelles de stockage dans Azure</block>
   <block id="137413da40700294b3660243904ade25" category="sidebar">Gérez les machines virtuelles de stockage dans Google Cloud</block>
+  <block id="5920daf334ecef8057dd1e1d15f6124e" category="doc">Déploiements en mode privé activés pour Cloud Volumes ONTAP 9.14.1</block>
+  <block id="f2035db09bb2be2db0508915fa584149" category="paragraph">Vous pouvez désormais déployer Cloud Volumes ONTAP 9.14.1 en mode privé dans AWS, Azure et Google Cloud. Le mode privé est activé pour les déploiements à un seul nœud et haute disponibilité (HA) de Cloud Volumes ONTAP 9.14.1.</block>
+  <block id="62bd7572081df25dd3f1f52151883c4a" category="inline-link">Découvrez les modes de déploiement BlueXP</block>
+  <block id="dc748283e7593515df9e8f2759a85349" category="paragraph">Pour plus d'informations sur les déploiements en mode privé, reportez-vous <block ref="312f421b6dd5cf62286ecf6a82a8132e" category="inline-link-rx"></block>à la section .</block>
+  <block id="210dc676779eae6698e4064fd965bda8" category="paragraph">Vous devez configurer vos clés de chiffrement sur le portail Azure. Pour plus d'informations sur la configuration des clés et la configuration de la rotation des clés, consultez les rubriques de documentation Microsoft Azure suivantes :</block>
+  <block id="348c2304e1a6efb529d00b9bacd96a8e" category="inline-link">Configurez la rotation automatique des clés cryptographiques dans Azure Key Vault</block>
+  <block id="f4d57411fbf6c0075178b1e3767b496e" category="list-text"><block ref="f4d57411fbf6c0075178b1e3767b496e" category="inline-link-rx"></block></block>
+  <block id="881f8c1da4935c7dbe1f6d696a16cd9c" category="inline-link">Azure PowerShell : activation des clés gérées par le client</block>
+  <block id="4a9f4b73b48b26dea345a1977b58dd51" category="list-text"><block ref="4a9f4b73b48b26dea345a1977b58dd51" category="inline-link-rx"></block></block>
+  <block id="a15076d8f5fd9af7af6dec9ab282588e" category="inline-link">Rotation des clés activée sur le portail Azure</block>
+  <block id="71b5648e677d1a5ebf3d343f3c10eb54" category="admonition">Après avoir configuré les clés, assurez-vous que vous disposez de<block ref="7b90d7bac505d4641bd5cd9a13a09c6c" category="inline-link-rx"></block>, afin que Cloud Volumes ONTAP puisse utiliser les nouvelles clés.</block>
+  <block id="5b41754d54a59a01d58e45b59544d3a6" category="paragraph">Lors de la création et de l'activation d'une nouvelle version de vos clés, Cloud Volumes ONTAP détecte et utilise automatiquement la dernière version pour le chiffrement. Vos données restent ainsi sécurisées sans mise à jour manuelle.</block>
+  <block id="5f2734b84896bdabcf7fd3574325d116" category="section-title">28 mars 2025</block>
 </blocks>
