@@ -100,15 +100,16 @@ Tous les comptes de stockage Azure pour Cloud Volumes ONTAP sont chiffrés à l'
 
 == Rotation des clés dans Cloud Volumes ONTAP
 
-Si vous créez une nouvelle version de votre clé, Cloud Volumes ONTAP utilise automatiquement la dernière version de la clé, garantissant ainsi la sécurité de vos données sans nécessiter de mises à jour manuelles.
+Vous devez configurer vos clés de chiffrement sur le portail Azure. Pour plus d'informations sur la configuration des clés et la configuration de la rotation des clés, consultez les rubriques de documentation Microsoft Azure suivantes :
 
-.Étapes
-. Accédez à votre coffre-fort de clés dans le portail Azure.
-. Sélectionnez la touche que vous souhaitez faire pivoter.
-. Cliquez sur *Nouvelle version* pour générer une nouvelle version de la clé.
+* https://learn.microsoft.com/en-us/azure/key-vault/keys/how-to-configure-key-rotation["Configurez la rotation automatique des clés cryptographiques dans Azure Key Vault"^]
+* https://learn.microsoft.com/en-us/azure/virtual-machines/windows/disks-enable-customer-managed-keys-powershell#set-up-an-azure-key-vault-and-diskencryptionset-with-automatic-key-rotation-preview["Azure PowerShell : activation des clés gérées par le client"^]
 
 
-Une fois qu'une nouvelle version est créée, Cloud Volumes ONTAP détecte et utilise automatiquement la dernière version de la clé pour le chiffrement.
+
+NOTE: Après avoir configuré les clés, assurez-vous que vous disposez de https://learn.microsoft.com/en-us/azure/virtual-machines/disk-encryption#customer-managed-keys["Rotation des clés activée sur le portail Azure"^], afin que Cloud Volumes ONTAP puisse utiliser les nouvelles clés.
+
+Lors de la création et de l'activation d'une nouvelle version de vos clés, Cloud Volumes ONTAP détecte et utilise automatiquement la dernière version pour le chiffrement. Vos données restent ainsi sécurisées sans mise à jour manuelle.
 
 
 
